fix a small bug related to the reply bar
same fix as the main ("replying to..." being invisible)

--- a/discord-theme.css
+++ b/discord-theme.css
@@ -527,7 +527,7 @@ nav[class^="wrapper_"] div[class^="listItem_"]+div[aria-label] {
     display: none;
 }
 
-[class^=bar_] {
+[class^=containerPadding_]>[class^=bar_] {
     display: none;
 }
 
